combine fetch google place into fetch place
